Giriş işlemleri implemente edildi
giriş ve kaydol activityleri oluşturuldu email ve şifre ile giriş işlemi
yapıldı ancak firebase sha1 kodu eklenemediği için sisteme giriş
yapamadı.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Fatihin İstanbulu</string>
+    <string name="loginError1">Kullanıcı Bulunamadı Lütfen Kayıt Olun</string>
+    <string name="register">Kayıt</string>
 </resources>
